# DistRuntime

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  demo.tape
.claude/: settings.local.json
.github/workflows/: ci.yml
checkpoint-engine/: Cargo.toml
checkpoint-engine/src/: lib.rs  registry.rs  resume.rs  storage.rs
coordinator/: Cargo.toml
coordinator/src/: lib.rs  metrics.rs  registry.rs  service.rs  shard_map.rs  tracker.rs
coordinator/tests/: fault_injection.rs  heartbeat.rs  load_chaos.rs  rebalance.rs  recovery.rs  registry.rs  shard_map.rs
data-loader/: Cargo.toml
data-loader/benches/: hot_path.rs
data-loader/examples/: custom_format_plugin.rs  hot_path_flamegraph.rs
data-loader/src/: file_reader.rs  format_plugin.rs  lib.rs  limiter.rs  parallel_reader.rs  record.rs  s3_reader.rs  s3_writer.rs  shard_reader.rs  stream.rs
data-loader/tests/: custom_plugin.rs  integration.rs  parallel_reader.rs
distruntime-cli/: Cargo.toml
distruntime-cli/src/: main.rs
distruntime-cli/tests/: cli_integration.rs
infra/grafana/: distruntime-observability-dashboard.json
infra/load-test/: load-test-report.md  run_load_test.sh
infra/profiling/: hot-path-report.md  run_hot_path_profiling.sh
proto/: distruntime.proto
proto-gen/: Cargo.toml  build.rs
proto-gen/src/: lib.rs
py-runtime/: Cargo.toml  distruntime.pyi  pyproject.toml
py-runtime/src/: lib.rs
worker-client/: Cargo.toml
worker-client/src/: heartbeat.rs  lib.rs  metrics.rs
