[workspace]
resolver = "2"
members = [
    "coordinator",
    "distruntime-cli",
    "worker-client",
    "checkpoint-engine",
    "data-loader",
    "proto-gen",
    "py-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.51", features = ["full"] }
tonic = "0.14"
prost = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
pyo3 = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
bytes = "1"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
tempfile = "3"
tokio-stream = "0.1"
once_cell = "1"
prometheus = "0.13"
axum = "0.8"
parquet = "58"
arrow = "58"

# intra-workspace crates
coordinator = { path = "coordinator" }
worker-client = { path = "worker-client" }
checkpoint-engine = { path = "checkpoint-engine" }
data-loader = { path = "data-loader" }
proto-gen = { path = "proto-gen" }
