[package]
name = "checkpoint-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
bytes.workspace = true
data-loader.workspace = true
