[package]
name = "coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
proto-gen.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile.workspace = true
tokio-stream.workspace = true
worker-client.workspace = true
