[package]
name = "coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
proto-gen.workspace = true
checkpoint-engine.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile.workspace = true
tokio-stream.workspace = true
worker-client.workspace = true
checkpoint-engine.workspace = true
