[package]
name = "data-loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
bytes.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
serde_json.workspace = true
parquet.workspace = true
arrow.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion = "0.5"
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[[bench]]
name = "hot_path"
harness = false
