[package]
name = "distruntime-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "distruntime"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tonic.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
proto-gen.workspace = true
coordinator.workspace = true
checkpoint-engine.workspace = true
tokio-stream.workspace = true
axum.workspace = true

[dev-dependencies]
tokio.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
coordinator.workspace = true
checkpoint-engine.workspace = true
proto-gen.workspace = true
