[package]
name = "py-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pyo3.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
data-loader.workspace = true
bytes.workspace = true
arrow.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
