[package]
name = "worker-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
prometheus.workspace = true
axum.workspace = true
proto-gen.workspace = true
